--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "dishes",
+  "name": "Tasks",
   "version": "1.0.0",
-  "description": "Starter point for a graphQL course",
+  "description": "Basic to do list based around Stephen griders excellent course",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/StephenGrider/Lyrical-GraphQL"
+    "url": "https://github.com/reggorordon/to_do_list"
   },
   "scripts": {
     "dev": "nodemon index.js --ignore client"
